# mini-todo

mini-todo-backend/: .gitignore  hello.py  pyproject.toml
mini-todo-backend/app/: main.py
mini-todo-backend/app/api/: database.py  deps.py  models.py
mini-todo-backend/app/api/router/: auth_v1.py  tasks_v1.py  users_v1.py
mini-todo-backend/app/config/: settings.py
mini-todo-backend/scripts/: run-postgres-docker-container.sh
mini-todo-frontend/: package-lock.json  package.json
mini-todo-frontend/app/: layout.tsx  page.tsx
mini-todo-frontend/components/: app-siderbar.tsx
mini-todo-frontend/components/sidebar/: app-sidebar.tsx  nav-actions.tsx  nav-favorites.tsx  nav-main.tsx  nav-secondary.tsx  nav-workspace.tsx
